--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Remove Donald Trump from Facebook",
-    "description": "Remove Donald Trump from Facebook Homepage",
-    "version": "2.2",
+    "name": "Remove Julio Guzman from Facebook",
+    "description": "Remove Julio Guzman from Facebook Homepage",
+    "version": "1.1",
     "manifest_version": 2,
     "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
     "icons": {  "48": "icon48.png",
